--- a/index.ipynb
+++ b/index.ipynb
@@ -454,11 +454,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_of_repeats = len(countries) - len(unique_countries)"
+    "num_of_repeats = len(countries) - len(unique_countries)\n",
+    "num"
    ]
   },
   {
