--- a/index.ipynb
+++ b/index.ipynb
@@ -454,12 +454,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 144,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-144-fed9dc00c5f8>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-144-fed9dc00c5f8>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    num_of repeats\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "num_of_repeats = len(countries) - len(unique_countries)\n",
-    "num"
+    "'num_of_repeats' = len(countries) - len(unique_countries)\n",
+    "num_of repeats"
    ]
   },
   {
