--- a/index.ipynb
+++ b/index.ipynb
@@ -454,21 +454,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-144-fed9dc00c5f8>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-144-fed9dc00c5f8>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    num_of repeats\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "'num_of_repeats' = len(countries) - len(unique_countries)\n",
-    "num_of repeats"
+    "num_of_repeats = len(countries) - len(unique_countries)\n",
+    "num_of_repeats"
    ]
   },
   {
